# je-transformer

./: .gitignore  ANALYSIS_FINDINGS.md  CHANGES_SUMMARY.md  MODERATOR_FINDINGS.md  _new_account_encoding.py  compute_engine_run.sh  final_req.txt  infer_all_small.sh  infer_small.py  main.py  migration.md  notes.md  plan.md  pyproject.toml  requirements.txt  retr.md  run_all_small.sh  run_vars_20251111-195721.env  run_vars_20251112-081221.env  smoke_test.py  test_db_connection.py  train_all.py  train_small.py  transformer-arch.md
data/: build_tfrecords.py  ingest_to_parquet.py  text_normalization.py
eval/: evaluate.py  retrieval_metrics.py
inference/: beam_decode.py  inference.py  postprocess.py  retrieval_memory.py
infra/: cloud_run_job_ingest.yaml
models/: catalog_encoder.py  hash_utils.py  hierarchy_utils.py  je_model.py  je_model_torch.py  losses.py  pointer.py  tokenizer.py
retrieval/: build_index.py  query.py
serving/: export.py
train/: dataset.py  pretrain_mlm.py  train.py
utils/: gcp_secrets.py
wandb/: latest-run
wandb/run-20251110_113628-c099fqkb/files/: requirements.txt  wandb-metadata.json
wandb/run-20251110_210216-qdnjx243/: run-qdnjx243.wandb
wandb/run-20251110_210216-qdnjx243/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251110_211812-xczhy1n7/: run-xczhy1n7.wandb
wandb/run-20251110_211812-xczhy1n7/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20251110_213752-ntn4dazz/files/: config.yaml  wandb-metadata.json  wandb-summary.json
