[project]
name = "journal-entry-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "python-dateutil>=2.9.0.post0",
    "scann>=1.4.2",
    "tensorflow-io-gcs-filesystem>=0.37.1",
    "transformers>=4.57.1",
]
