[project]
name = "journal-entry-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy<2",
    "python-dateutil>=2.9.0.post0",
    "scann",
    "torch>=2.9.0,<2.10.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
    "pyarrow>=16.0.0",
    "pandas>=2.2.0",
    "gcsfs>=2024.6.0",
    "transformers>=4.57.1",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "wandb>=0.16.0",
    "ipykernel>=7.1.0",
]
